<resources>
    <string name="app_name">写轮眼录屏</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="request_permission">需要允许权限才能使用该功能</string>
    <string name="version_too_low">需要Android5.0系统以上，才能使用该功能。</string>
    <string name="nav_settings">设置</string>
    <string name="nav_about">关于</string>
    <string name="nav_video_library">我的录制</string>
    <string name="nav_donate">捐赠</string>
    <string name="get_media_error">没有获取到录像文件</string>


    <!--ijkplayer-->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="lockscreen_transport_play_description">play</string>
    <string name="lockscreen_transport_pause_description">pause</string>
    <string name="description">描述</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="wechat_video_support_limit">微信暂不支持多个视频同时分享！</string>
    <string name="record_stop">录制停止</string>
    <string name="dialog_request_float_title">悬浮窗权限</string>
    <string name="dialog_request_float_content">要实现屏幕录制功能需要悬浮窗权限，请设置允许。</string>
    <string name="dialog_ok">去设置</string>
    <string name="dialog_cancel">取消</string>
    <string name="permission_record_refuse">请点击立即开始，开始录制屏幕</string>
    <string name="settings_list_preference_video_resolution">视频分辨率</string>
    <string name="settings_list_preference_bit_rate">视频码率</string>
    <string name="settings_list_preference_video_frame">视频帧率</string>
    <string name="audio_record">音频录制</string>
    <string name="about_title">跪求bug反馈和改进建议！</string>
    <string name="about_email">邮箱反馈</string>
    <string name="about_github">源代码</string>
    <string name="about_address">浙江，杭州</string>
    <string name="about_email_intent">关于：写轮眼录屏</string>
    <string name="about_not_found_email">没有找到email应用</string>
    <string name="donate_not_open">此功能尚未开通~</string>
    <string name="begin">开始</string>
    <string name="dialog_exit_title">退出应用</string>
    <string name="dialog_exit_message">是否退出写轮眼录屏？</string>
    <string name="dialog_exit_ok">退出</string>
    <string name="dialog_exit_cancel">取消</string>
    <string name="choose_style">切换形态</string>
    <string name="style_grid">style_grid</string>
    <string name="style_list">style_list</string>
    <string name="settings_list_preference_video_quality">录屏画质</string>
    <string name="in_app">开始体验</string>
    <string name="notify_content">写轮眼录屏</string>
    <string name="launcher_step1_msg">简单好用的屏幕录制软件</string>
    <string name="start">启动</string>

</resources>
