<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_video_library"
            android:icon="@mipmap/ic_video_library"
            android:title="@string/nav_video_library" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_setting"
            android:title="@string/nav_settings" />
    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@mipmap/ic_money"
            android:title="@string/nav_donate" />
    </group>

</menu>
