<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_share"
        android:title="@string/share"
        android:orderInCategory="80"
        android:icon="@mipmap/ic_share"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="90"
        android:icon="@mipmap/ic_delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_display_style"
        android:title="@string/style_grid"
        android:orderInCategory="90"
        android:icon="@drawable/ic_action_item_style_grid"
        app:showAsAction="ifRoom"/>
</menu>